# RoughFab

./: .gitignore  Beamsearch.h  CMakeLists.txt  OutputWithLibigl.h  README.md  RoughFab.cpp  RoughFab.sln  RoughFab.vcxproj  RoughFab.vcxproj.filters  main.cpp  temp.txt  test.cpp  ttt.txt  文件上传.txt
x64/Debug/: RoughFab.exe.recipe  RoughFab.ilk  RoughFab.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/RoughFab.tlog/: CL.command.1.tlog  RoughFab.lastbuildstate  link.command.1.tlog
